# carapex

./: .gitignore  CARAPEX_SPEC.md  DESIGN.md  README.md  __init__.py  __main__.py  config.py  exceptions.py  processor.py  providers.py  pyproject.toml
audit/: __init__.py  base.py  file_backend.py  null_backend.py
backends/: __init__.py  base.py  llama_cpp.py  openai_compatible.py
carapex/: __init__.py  carapex.py
carapex/audit/: __init__.py  base.py  file_auditor.py  memory_auditor.py
carapex/core/: __init__.py  config.py  exceptions.py  registry.py  types.py
carapex/llm/: __init__.py  base.py  openai_provider.py
carapex/normaliser/: __init__.py  base.py  decoders.py
carapex/safety/: __init__.py  base.py  coordinator.py  entropy.py  guard.py  pattern.py  script.py  translator.py
carapex/safety/prompts/: input_guard.txt  output_guard.txt
carapex/server/: __init__.py  base.py  fastapi_backend.py
normaliser/: __init__.py  base.py  base64.py  homoglyph.py  html_entity.py  normaliser.py  unicode_escape.py  url.py  whitespace.py
safety/: __init__.py  base.py  composite.py  entropy.py  guard.py  output.py  output_guard.py  pattern.py  script.py  translation.py
scripts/: run_carapex.py
tests/: conftest.py  test_close.py  test_config.py  test_coordinator.py  test_exceptions.py  test_normaliser.py  test_pipeline.py  test_processor.py  test_safety.py  test_safety_checkers.py  test_script_checker.py  test_translation.py  test_types.py
