[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carapex"
version = "0.13.0"
description = "A transparent safety proxy for LLM applications"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "lingua-language-detector>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["carapex*"]

[tool.setuptools.package-data]
"carapex.safety.prompts" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
